--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "msw": "^0.49.2",
     "nodemon": "^2.0.20",
     "playwright": "^1.28.1",
     "prisma": "^4.7.0",
@@ -64,7 +63,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.13",
+    "msw": "0.49.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
